# diffusers-inpainting-worker

./: .env.sample  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  start.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: celeryconfig.py  config.py  enums.py  ml_model.py  schemas.py  tasks.py  utils.py  worker.py
